[feat]: Created Tutores Model

--- a/INSTITUCION_ACADEMIA XTUDIA/INSTITUCION_ACADEMIA XTUDIA.csproj
+++ b/INSTITUCION_ACADEMIA XTUDIA/INSTITUCION_ACADEMIA XTUDIA.csproj
@@ -130,6 +130,7 @@
       <DependentUpon>InstitucionDataSet.xsd</DependentUpon>
     </Compile>
     <Compile Include="Models\Estudiante.cs" />
+    <Compile Include="Models\Tutores.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
