[feat]: Created Correo Model

--- a/INSTITUCION_ACADEMIA XTUDIA/INSTITUCION_ACADEMIA XTUDIA.csproj
+++ b/INSTITUCION_ACADEMIA XTUDIA/INSTITUCION_ACADEMIA XTUDIA.csproj
@@ -129,6 +129,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>InstitucionDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="Models\Correo.cs" />
     <Compile Include="Models\Estudiante.cs" />
     <Compile Include="Models\Tutores.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
