[feat]: Created Telefono model

--- a/INSTITUCION_ACADEMIA XTUDIA/INSTITUCION_ACADEMIA XTUDIA.csproj
+++ b/INSTITUCION_ACADEMIA XTUDIA/INSTITUCION_ACADEMIA XTUDIA.csproj
@@ -131,6 +131,7 @@
     </Compile>
     <Compile Include="Models\Correo.cs" />
     <Compile Include="Models\Estudiante.cs" />
+    <Compile Include="Models\Telefono.cs" />
     <Compile Include="Models\Tutores.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
