[feat]: Implemented post Estudiante

--- a/INSTITUCION_ACADEMIA XTUDIA/INSTITUCION_ACADEMIA XTUDIA.csproj
+++ b/INSTITUCION_ACADEMIA XTUDIA/INSTITUCION_ACADEMIA XTUDIA.csproj
@@ -184,6 +184,8 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Estudiante\Create.cshtml" />
+    <Content Include="Views\Estudiante\Index.cshtml" />
+    <Content Include="Views\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
