[feat]: Implemented Update Tutor

--- a/INSTITUCION_ACADEMIA XTUDIA/INSTITUCION_ACADEMIA XTUDIA.csproj
+++ b/INSTITUCION_ACADEMIA XTUDIA/INSTITUCION_ACADEMIA XTUDIA.csproj
@@ -189,6 +189,7 @@
     <Content Include="Views\Tutor\Create.cshtml" />
     <Content Include="Views\Tutor\Index.cshtml" />
     <Content Include="Views\Estudiante\Edit.cshtml" />
+    <Content Include="Views\Tutor\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
